2007-06-10  TOKI Yoshinori  <toki@freedom.ne.jp>

	* gluon.rb: project start.
