@@ -1,0 +1,8 @@
+class Welcom
+  # for ident(1)
+  CVS_ID = '$Id$'
+
+  def title
+    'Welcom to Gluon'
+  end
+end
