@@ -1,0 +1,20 @@
+<html>
+<head>
+<title><%= value :title %></title>
+</head>
+<body>
+<h1><%= value :title %></h1>
+
+<h2>Description</h2>
+<p>Gluon is simple web application framework. This is a sample of web
+application.</p>
+
+<h2>Examples</h2>
+<p><em>not implemented...</em></p>
+
+<hr />
+<address>
+Author: <a href="mailto:toki@freedom.ne.jp">TOKI Yoshinori</a>
+</address>
+</body>
+</html>
